; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/l2cap/extr_l2c_ble.c_l2cble_create_conn.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/l2cap/extr_l2c_ble.c_l2cble_create_conn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@BLE_CONN_IDLE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [56 x i8] c"L2CAP - LE - cannot start new connection at conn st: %d\00", align 1
@BLE_BG_CONN = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @l2cble_create_conn(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = call i64 (...) @btm_ble_get_conn_st()
  store i64 %5, i64* %3, align 8
  %6 = load i32, i32* @FALSE, align 4
  store i32 %6, i32* %4, align 4
  %7 = load i64, i64* %3, align 8
  %8 = load i64, i64* @BLE_CONN_IDLE, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @l2cble_init_direct_conn(i32* %11)
  store i32 %12, i32* %4, align 4
  br label %25

13:                                               ; preds = %1
  %14 = load i64, i64* %3, align 8
  %15 = call i32 @L2CAP_TRACE_WARNING(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0), i64 %14)
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @btm_ble_enqueue_direct_conn_req(i32* %16)
  %18 = load i64, i64* %3, align 8
  %19 = load i64, i64* @BLE_BG_CONN, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %13
  %22 = call i32 (...) @btm_ble_suspend_bg_conn()
  br label %23

23:                                               ; preds = %21, %13
  %24 = load i32, i32* @TRUE, align 4
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %23, %10
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i64 @btm_ble_get_conn_st(...) #1

declare dso_local i32 @l2cble_init_direct_conn(i32*) #1

declare dso_local i32 @L2CAP_TRACE_WARNING(i8*, i64) #1

declare dso_local i32 @btm_ble_enqueue_direct_conn_req(i32*) #1

declare dso_local i32 @btm_ble_suspend_bg_conn(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
